--- a/auto-changelog/package.json
+++ b/auto-changelog/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-changelog",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "version": "auto-changelog -p && git add CHANGELOG.md"
+    "version": "auto-changelog --template changelog-templates/changelog-template.hbs"
   },
   "private": true,
   "dependencies": {
